@@ -45,8 +45,10 @@ details.  */
 									\
   klass;								\
  })
-#else
-#define GET_CALLING_CLASS(PC) NULL
+#else // __ARM_EABI_UNWINDER__
+// ARM EABI doesn't support _Unwind_FindEnclosingFunction.
+#define GET_CALLING_CLASS(PC)				\
+  (_Jv_StackTrace::GetStackWalkerCallingClass ())
 #endif
 
 JArray<jclass> *
@@ -63,14 +65,18 @@ jclass
 gnu::classpath::VMStackWalker::getCallingClass(void)
 {
   _Jv_InitClass (&::gnu::classpath::VMStackWalker::class$);
-  return _Jv_StackTrace::GetStackWalkerCallingClass ();
+  jclass result = _Jv_StackTrace::GetStackWalkerCallingClass ();
+  __asm__ __volatile__ ("" : : "g" (result));
+  return result;
 }
 
 jclass
 gnu::classpath::VMStackWalker::getCallingClass(::gnu::gcj::RawData *pc)
 {
   _Jv_InitClass (&::gnu::classpath::VMStackWalker::class$);
-  return GET_CALLING_CLASS(pc);
+  jclass result = GET_CALLING_CLASS(pc);
+  __asm__ __volatile__ ("" : : "g" (result));
+  return result;
 }
 
 ::java::lang::ClassLoader *
