@@ -1,3 +1,9 @@
+2007-08-29  Andrew Haley  <aph@redhat.com>
+
+	* gnu/classpath/natVMStackWalker.cc (VMStackWalker::getCallingClass):
+	Make sure we're not sibcalled.
+	(GET_CALLING_CLASS): Define for ARM EABI.
+
 2007-08-22  Andrew Haley  <aph@redhat.com>
 
 	* configure.host (BACKTRACESPEC): Add arm*-linux*.
